src/objects/FieloAlpha__BadgeMember__c.object
<CustomObject>
    <customHelpPage>FieloPLT__BadgeHelpBackEnd</customHelpPage>
    <description>Badges achieved by each member.</description>
    <fields>
        <fullName>FieloPLT__Badge2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Badge</label>
        <referenceTo>FieloPLT__Badge__c</referenceTo>
        <relationshipLabel>Badge Members</relationshipLabel>
        <relationshipName>BadgesMembers2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Badge Members</relationshipLabel>
        <relationshipName>BadgesMembers2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloPLT__Transaction__c</referenceTo>
        <relationshipLabel>Badges Members</relationshipLabel>
        <relationshipName>Badges_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Badge Member</label>
    <nameField>
        <label>BadgeMember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badges Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ProgramConsistency</fullName>
        <active>true</active>
        <errorConditionFormula>FieloPLT__Member2__r.FieloPLT__Program__c &lt;&gt; FieloPLT__Badge2__r.FieloPLT__Program__c</errorConditionFormula>
        <errorMessage>That segment belongs to another program. You must create the segment in this program before trying to use it.</errorMessage>
    </validationRules>
</CustomObject>